<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>matcher</groupId>
  <artifactId>matcher</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>Matcher</name>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
  </properties>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.22.2</version>
      </plugin>
      <plugin>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>2.22.2</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.2.4</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <shadedArtifactAttached>true</shadedArtifactAttached>
              <shadedClassifierName>jar-with-dependencies</shadedClassifierName>
              <minimizeJar>true</minimizeJar>
              <relocations>
                <relocation>
                  <pattern>com.fasterxml</pattern>
                  <shadedPattern>matcher.internal.com.fasterxml</shadedPattern>
                </relocation>
                <relocation>
                  <pattern>com.github</pattern>
                  <shadedPattern>matcher.internal.com.github</shadedPattern>
                </relocation>
                <relocation>
                  <pattern>com.github.gumtreediff</pattern>
                  <shadedPattern>matcher.internal.com.github.gumtreediff</shadedPattern>
                </relocation>
                <relocation>
                  <pattern>com.google</pattern>
                  <shadedPattern>matcher.internal.com.google</shadedPattern>
                </relocation>
                <relocation>
                  <pattern>com.martiansoftware</pattern>
                  <shadedPattern>matcher.internal.com.martiansoftware</shadedPattern>
                </relocation>
                <relocation>
                  <pattern>gnu.trove</pattern>
                  <shadedPattern>matcher.internal.gnu.trove</shadedPattern>
                </relocation>
                <relocation>
                  <pattern>gumtree.spoon</pattern>
                  <shadedPattern>matcher.internal.gumtree.spoon</shadedPattern>
                </relocation>
                <relocation>
                  <pattern>javax</pattern>
                  <shadedPattern>matcher.internal.javax</shadedPattern>
                </relocation>
                <relocation>
                  <pattern>junit</pattern>
                  <shadedPattern>matcher.internal.junit</shadedPattern>
                </relocation>
                <relocation>
                  <pattern>net.bytebuddy</pattern>
                  <shadedPattern>matcher.internal.net.bytebuddy</shadedPattern>
                </relocation>
                <relocation>
                  <pattern>org.aopalliance</pattern>
                  <shadedPattern>matcher.internal.org.aopalliance</shadedPattern>
                </relocation>
                <relocation>
                  <pattern>org.apache</pattern>
                  <shadedPattern>matcher.internal.org.apache</shadedPattern>
                </relocation>
                <relocation>
                  <pattern>org.atteo</pattern>
                  <shadedPattern>matcher.internal.org.atteo</shadedPattern>
                </relocation>
                <relocation>
                  <pattern>org.codehaus</pattern>
                  <shadedPattern>matcher.internal.org.codehaus</shadedPattern>
                </relocation>
                <relocation>
                  <pattern>org.eclipse</pattern>
                  <shadedPattern>matcher.internal.org.eclipse</shadedPattern>
                </relocation>
                <relocation>
                  <pattern>org.hamcrest</pattern>
                  <shadedPattern>matcher.internal.org.hamcrest</shadedPattern>
                </relocation>
                <relocation>
                  <pattern>org.jgrapht</pattern>
                  <shadedPattern>matcher.internal.org.jgrapht</shadedPattern>
                </relocation>
                <relocation>
                  <pattern>org.junit</pattern>
                  <shadedPattern>matcher.internal.org.junit</shadedPattern>
                </relocation>
                <relocation>
                  <pattern>org.mockito</pattern>
                  <shadedPattern>matcher.internal.org.mockito</shadedPattern>
                </relocation>
                <relocation>
                  <pattern>org.rendersnake</pattern>
                  <shadedPattern>matcher.internal.org.rendersnake</shadedPattern>
                </relocation>
                <relocation>
                  <pattern>org.simmetrics</pattern>
                  <shadedPattern>matcher.internal.org.simmetrics</shadedPattern>
                </relocation>
                <relocation>
                  <pattern>org.slf4j</pattern>
                  <shadedPattern>matcher.internal.org.slf4j</shadedPattern>
                </relocation>
                <relocation>
                  <pattern>org.springframework</pattern>
                  <shadedPattern>matcher.internal.org.springframework</shadedPattern>
                </relocation>
                <relocation>
                  <pattern>org.tukaani</pattern>
                  <shadedPattern>matcher.internal.org.tukaani</shadedPattern>
                </relocation>
                <relocation>
                  <pattern>org.w3c</pattern>
                  <shadedPattern>matcher.internal.org.w3c</shadedPattern>
                </relocation>
                <relocation>
                  <pattern>spark</pattern>
                  <shadedPattern>matcher.internal.spark</shadedPattern>
                </relocation>
                <relocation>
                  <pattern>spoon</pattern>
                  <shadedPattern>matcher.internal.spoon</shadedPattern>
                </relocation>
              </relocations>
              <transformers>
                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                  <manifestEntries>
                    <Main-Class>matcher.main.ExecuteMatcher</Main-Class>
                    <Automatic-Module-Name>${project.artifactId}</Automatic-Module-Name>
                    <Implementation-Title>${project.description}</Implementation-Title>
                    <Implementation-Vendor>${project.organization.name}</Implementation-Vendor>
                    <Implementation-Version>${dist.version}</Implementation-Version>
                  </manifestEntries>
                </transformer>
              </transformers>
              <filters>
                <filter>
                  <artifact>*:*</artifact>
                  <excludes>
                    <exclude>META-INF/*.SF</exclude>
                    <exclude>META-INF/*.DSA</exclude>
                    <exclude>META-INF/*.RSA</exclude>
                  </excludes>
                </filter>
              </filters>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
		    <groupId>org.apache.maven.plugins</groupId>
		    <artifactId>maven-assembly-plugin</artifactId>
			    <configuration>
					<archive>
						<manifest>
							<mainClass>matcher.main.ExecuteMatcher</mainClass>
						</manifest>
					</archive>
						<descriptorRefs>
							<descriptorRef>jar-with-dependencies</descriptorRef>
						</descriptorRefs>
				</configuration>
		  </plugin>
    </plugins>
  </build>

  <dependencies>
    <dependency>
      <groupId>com.github.gumtreediff</groupId>
      <artifactId>client.diff</artifactId>
      <version>2.1.2</version>
    </dependency>
    <dependency>
      <groupId>fr.inria.gforge.spoon</groupId>
      <artifactId>spoon-core</artifactId>
      <version>8.4.0-beta-2</version>
    </dependency>
    <dependency>
      <groupId>fr.inria.gforge.spoon.labs</groupId>
      <artifactId>gumtree-spoon-ast-diff</artifactId>
      <version>1.27</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>5.7.0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>5.7.0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-params</artifactId>
      <version>5.7.0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>3.7.7</version>
    </dependency>
    <dependency>
      <groupId>log4j</groupId>
      <artifactId>log4j</artifactId>
      <version>1.2.17</version>
    </dependency>
    <dependency>
      <groupId>commons-cli</groupId>
      <artifactId>commons-cli</artifactId>
      <version>1.4</version>
    </dependency>
  </dependencies>
</project>
